--- a/src/css/Article.css
+++ b/src/css/Article.css
@@ -1,4 +1,6 @@
 .art1 {
   color: white;
-  border: 1px solid blue;
+  border-bottom: 1px solid blue;
+  text-decoration: none;
+  list-style: none;
 }
