--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,31 +1,55 @@
 footer {
-  /* border: 1px solid red; */
+  background: black;
   width: 100%;
   height: 110px;
   bottom: 0px;
-  position: absolute;
+  font-size: 15px;
+  position: fixed;
 }
-ul {
-  margin: 0;
-  padding: 0;
+.copy {
+  flex-wrap: nowrap;
+  /* Copyright */
+  color: white;
+  font-size: 15px;
+}
+.logo {
+  margin-top: 35px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+.logo li {
   list-style: none;
 }
-li {
-  align-items: center;
+.logo li a {
+  margin: 10px;
 }
-a {
-  display: block;
-  width: 25px;
-  height: 25px;
-  padding: 2px 7px;
+.logo .tw {
+  /* 트위터 */
+  width: 35px;
+  height: 35px;
+  border-radius: 8px;
+  color: #1da1f2;
+}
+.logo .fb {
+  /* 페이스북 */
+  width: 35px;
+  height: 35px;
+  border-radius: 8px;
+  /* color: #1877f2; */
   color: white;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 7px;
 }
-.tw {
-  background-color: white;
+.logo .star {
+  /* 인스타 */
+  width: 35px;
+  height: 35px;
+  border-radius: 8px;
+  background: linear-gradient(145deg, #3051f1 10%, #c92bb7 70%);
 }
-.fb {
-  background-color: #1877f2;
+.logo .leaf {
+  /* sesac */
+  width: 35px;
+  height: 35px;
+  border-radius: 8px;
+  color: #9cff57;
 }
