--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -6,11 +6,6 @@
 .MainBg {
   border: 0;
   padding: 0;
-  /* background-image: url(../img/img_front_visual.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover; */
-  background: white;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 }
