--- a/src/css/Article.css
+++ b/src/css/Article.css
@@ -1,6 +1,10 @@
-.art1 {
-  color: white;
-  border-bottom: 1px solid blue;
-  text-decoration: none;
-  list-style: none;
+article
+{   
+    display :inline-flexbox;
+    width : auto;
+    height: auto;
 }
+
+.clearfix {*zoom:1;}
+.clearfix:before, .clearfix:after {display:block; content: ''; line-height: 0;}
+.clearfix:after {clear: both;}
