--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,7 +1,9 @@
 .bg {
+  border: 0;
+  padding: 0;
   background-image: url("../img/img_front_visual.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 600px;
-  width: 100%;
+  min-height: calc(100vh - 150px);
+  background-position: center;
 }
