--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,9 +1,11 @@
-.bg {
+* {
+  margin: 0;
+  padding: 0;
+  /* 모든 태그에 여백을 없앰  화면 꽉차게함 */
+}
+.HomeBg {
   border: 0;
   padding: 0;
-  background-image: url("../img/img_front_visual.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: calc(100vh - 150px);
-  background-position: center;
+  min-height: 100vh;
+  width: 100vw;
 }
