아티클레이아웃통합 및 페이지 내부 이동링크 연결

--- a/src/css/Article.css
+++ b/src/css/Article.css
@@ -3,6 +3,7 @@ article
     display :inline-flexbox;
     width : auto;
     height: auto;
+    background-color: rgb(58, 58, 58);
 }
 
 .clearfix {*zoom:1;}
