--- a/src/css/ContentList.css
+++ b/src/css/ContentList.css
@@ -2,9 +2,11 @@
 {
     border : 1px solid gray;
     float : left;
+    color : white;
+    
 }
 
-.content-list h3
+.content-list h2
 {
     font-weight: normal;
 }
@@ -19,4 +21,16 @@ ul {
 }
 li {
     margin: 0px 40px;
+    font-size: 19px;
+}
+
+aside a
+{
+    color : rgb(255, 153, 0);
+    text-decoration-line: none;
+}
+
+aside a:hover
+{
+    text-decoration-line: underline;
 }
