--- a/src/css/ITable2Column.css
+++ b/src/css/ITable2Column.css
@@ -1,20 +1,31 @@
 .bottombody tr
 {
     background-color: black;
+    
 }
 tbody tr tr td
 {
     border : none;
     width : 400px;
 }
+
+.border
+{
+    
+    font-weight: bolder;    
+}
 th
 {
     background-color: #4a8de1;
+    width:30%;
+    border-bottom: 1px solid black;
 }
 
 td
 {
-    background-color: black;
+    height : 40px;
+    background-color: rgb(51, 51, 51);
     text-align: center;
+    font-size: 18px;
     border : 1px solid gray;
 }
