--- a/src/css/ContentList.css
+++ b/src/css/ContentList.css
@@ -1,5 +1,6 @@
 .content-list
 {
+    padding : 30px 10px;
     border : 1px solid gray;
     float : left;
     color : white;
@@ -20,8 +21,9 @@ ul {
     list-style-position: inside;
 }
 li {
-    margin: 0px 40px;
+    margin: 0px 20px;
     font-size: 19px;
+    line-height: 30px;
 }
 
 aside a
