--- a/src/css/TopArticle.css
+++ b/src/css/TopArticle.css
@@ -1,4 +1,25 @@
+@media (max-width:1400px)
+{
+    .top-article
+    {
+        display:grid;
+        border : 1px solid red;
+    }
+}
+
+.top-a-container
+{
+    width : 100%;
+}
+
+.top-aside
+{
+    width:15%;
+}
+
 .top-article
 {
-    width:35%;
+    width:100%;
 }
+
+
