--- a/src/css/Templates/Athene2004/A2004ITable2Column.css
+++ b/src/css/Templates/Athene2004/A2004ITable2Column.css
@@ -1,9 +1,9 @@
-.bottombody tr
+.a2004-bottom-body tr
 {
     background-color: black;
     
 }
-tbody tr tr td
+.a2004-bottom-body tr tr td
 {
     height : 40px;
     background-color: rgb(51, 51, 51);
@@ -16,14 +16,14 @@ tbody tr tr td
     
     font-weight: bolder;    
 }
-th
+.a2004-bottom-body th
 {
     background-color: #4a8de1;
     width:30%;
     border-bottom: 1px solid black;
 }
 
-.bottom-body > tr > td
+.a2004-bottom-body > tr > td
 {
     height : 40px;
     background-color: rgb(51, 51, 51);
