--- a/src/css/Templates/Athene2004/A2004Introduce.css
+++ b/src/css/Templates/Athene2004/A2004Introduce.css
@@ -1,11 +1,17 @@
 .container
 {
     float : right;
+    
+    width : 500px;
+    
+    text-align: center;
+}
+
+#a2004container
+{
     color : white;
     border : 2px solid #4a8de1;
-    width : 500px;
     background-color:#4a8de1;
-    text-align: center;
 }
 
 table
